src/sass/pages/_donate.scss
.donateBackground {
  background-color: $blue;

  &__heading {
    text-align: center;
    padding-top: 12rem;
    color: $color-purple;
    padding-bottom: 4rem;
  }
}
.amount {
  border-radius: 1rem;
  padding-bottom: 1rem;

  &__container {
    margin-top: 2rem;
    margin-bottom: 1rem;
    background-color: $color-white;
    text-align: center;
    display: inline-block;
    padding: 0 1rem;
    font-size: 1.2rem;
    border-radius: 0.5rem;
    &--label {
      padding: 0 0.5rem;
      font-size: 1.6rem;
      color: $color-black;
    }
    &--donationLabel {
      margin-bottom: 1rem;
      font-size: 1.3rem;
      display: block;
      color: $purple;
      display: inline-block;
      margin-right: 1rem;
      font-family: "Ubuntu";
    }
    &--input {
      border: none;
      font-family: "Ubuntu";
      font-size: 1.5rem;
      padding: 0.7rem 0;
      padding-left: 1rem;
      width: 6rem;
      outline: none;
      white-space: nowrap;
    }
  }
}

.donationForm {
  border: solid $purple thin;
  border-radius: 1rem;
  padding: 1rem;
  background-color: $color-white;

  &__amounts {
    margin-bottom: 2rem;
    &--btn {
      margin-top: 0.5rem;
      display: inline-block;
      padding: 1rem 2.3rem;
      font-size: 1.3rem;
      color: $color-purple;
      cursor: pointer;
      border: solid $color-purple thin;
      border-radius: 0.5rem;
      margin-right: 1.6rem;
    }
    &--btn:hover {
      transform: translateY(-0.5rem) scale(1.01);
      box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
    }
  }

  &__formLabel {
    color: $purple;
    padding: 0.7rem;
    font-size: 1.5rem;
    text-align: left;
  }

  &__information {
    border: solid $purple thin;
    border-radius: 0.5rem;
    padding: 1rem;
    margin-bottom: 1rem;

    &--input {
      display: block;
      margin: 0.7rem;
      width: 40rem;
      padding: 0.5rem;
      border: none;
      border-bottom: solid $purple thin;
      border-radius: 0.3rem;
      font-family: "Ubuntu", sans-serif;
      font-size: 1.4rem;
    }
  }
  &__donation {
    border: solid $purple thin;
    border-radius: 0.5rem;
    padding: 2rem;
  }
  &__button {
    display: inline-block;
    border-radius: 0.5rem;
    background-color: white;
    text-align: center;
    margin: 1rem 0;
    font-size: 1.7rem;
    padding: 1rem 3rem;
    color: $color-white;
    background-color: $color-purple;
    margin-left: 19rem;
    letter-spacing: 0.2rem;
    margin-top: 2rem;
    cursor: pointer;
    transition: transform 0.4s;
    box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
    &:hover {
      background-color: $color-white;
      color: $color-purple;
      border: solid $color-purple thin;
      transform: translateY(-1rem) scale(1.03);
    }
    &:disabled {
      color: gray;
      background-color: whitesmoke;
      margin-left: 17rem;
    }
  }
}

.everyForm {
  margin-bottom: 35rem;
}

.StripeElement {
  background-color: $color-white;
  padding: 0.7rem 0.5rem;
  border-radius: 0.5rem;
  margin-top: -2rem;
}

// SWITCHER

.question {
  position: relative;
  &__container {
    color: $color-purple;
    position: absolute;
    top: 0.7rem;
    left: 5.5rem;
    font-size: 1.3rem;
  }
}
/* The switch - the box around the slider */
.switch {
  position: relative;
  display: inline-block;
  width: 45px;
  height: 25px;
}

/* Hide default HTML checkbox */
.switch input {
  display: none;
}

/* The slider */
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: $color-purple;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 20px;
  width: 20px;
  right: 3px;
  bottom: 3px;
  background-color: white;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

input:checked + .slider {
  background-color: $color-purple;
  background-color: #ccc;
}

input:focus + .slider {
  box-shadow: 0 0 1px #ccc;
}

input:checked + .slider:before {
  -webkit-transform: translateX(-18px);
  -ms-transform: translateX(-18px);
  transform: translateX(-18px);
}

// Rounded sliders
.slider.round {
  border-radius: 32px;
}

.slider.round:before {
  border-radius: 50%;
}

